# bug_reproduction_01

./: BUILD.bazel  WORKSPACE  my_code.json  package.json  tsconfig.json
